[package]
name        = "api-bench"
version     = "0.1.0"
edition     = "2021"
description = "Fast, minimal-dependency CLI load-tester for REST APIs"
[dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros","fs"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap        = { version = "4", features = ["derive", "env"] }
humantime   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
csv         = "1"
indicatif   = "0.17"
num_cpus    = "1"
futures     = "0.3"
